@@ -77,7 +77,7 @@ from .norway import Norway, NO, NOR
 from .paraguay import Paraguay, PY, PRY
 from .peru import Peru, PE, PER
 from .poland import Poland, PL, POL
-from .portugal import Portugal, PT, PRT, PortugalExt, PTE, PRTE
+from .portugal import Portugal, PT, PRT
 from .romania import Romania, RO, ROU
 from .russia import Russia, RU, RUS
 from .saudi_arabia import SaudiArabia, SA, SAU
