@@ -5,7 +5,8 @@ Released ?????? ??, ????
 
 - Support for Cuba #678 (bthompson)
 - Typechecking implementation, first release (HolidayBase, utils, some sample countries) #661 (dimbleby)
-- Test coverage improvement #633 (akosfurton)
+- Test coverage improvement #633 (akosfurton, dr-p)
+- Drop support for PortugalExt (ie: extended Portugal) (dr-p)
 - US fixes #675 (arkid15r)
 - Colombia fixes & test improvements #676 (bkthomps)
 - Venezuela fixes & test improvements #677 (bkthomps)
